branch is updated to avoid failling too far behind

--- a/srcs/static/css/_auth_form.css
+++ b/srcs/static/css/_auth_form.css
@@ -14,6 +14,7 @@
 	gap: 6px;
 	border-radius: 10px;
 	padding: 20px;
+	user-select: none;
   }
   
   .custom-form-group {
